crates/tsuno-driver/tests/fixtures/snapshots/pass/verifies_i32_entry_invariant.rs
fn verifies_i32_entry_invariant(x: i32) {
    //@ assert -2147483648 <= {x} && {x} <= 2147483647;
}

fn main() {}
