crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_bare_rust_binding_in_lemma_call.rs
/*@
fn prove_42(x: i32)
  req true
  ens x == 42i32
{
    assume false;
}
*/

fn main() {
    let x = 42_i32;
    //@ prove_42(x);
}
